web-client/overlays/production/ingresses/nooz.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "True"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "True"
    nginx.ingress.kubernetes.io/use-regex: "True"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* "^/" {
        proxy_pass https://d1crvq4zuhdsef.cloudfront.net/503_nooz/index.html?$1;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
      }

      location /custom_50x/ {
        proxy_pass https://d1crvq4zuhdsef.cloudfront.net/503_nooz/;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
      }

      error_page 500 502 503 504 /custom_50x/index.html;
      location /error_testing {
          fastcgi_pass unix:/does/not/exist;
      }

  name: web-client-nooz
  namespace: web-client
spec:
  rules:
    - host: old.nooz.mx
      http:
        paths:
          - backend:
              service:
                name: web-client-nooz
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
